# WIFA

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  foxes_api.py  main_api.py  patch1.diff  pyproject.toml  pywake_api.py  setup.cfg  setup.py  validate_data.py  wayve_run.py
.github/workflows/: build-dev-docs.yml  deploy-docs.yml  run_tests.yml
cs_api/: README.md  cs_api.py  generate_salome_mesh.py  launch_full_simulation.sh  launch_mesh.sh  my_cp_table.csv  my_cp_table2.csv  my_ct_table.csv  my_ct_table2.csv  my_meteo_profile  my_turbine_info.csv
cs_api/MESH/: README.md
cs_api/plant_wind_farm/: IEA37_case_study_3_wind_farm.yaml
docs/: README.md  how2build.txt
docs/source/: API.rst  Functions.rst  InputsOutputs.rst  Tools.rst  codesaturne.rst  conf.py  cs_api.rst  cs_equations.rst  cs_inflow.rst  cs_mesh.rst  cs_turbines.rst  examples.rst  foxes.rst  foxes_api.rst  index.rst  installation.rst  main_api.rst  pywake.rst  pywake_api.rst  pywake_ellipsys.rst  references.bib  references.rst  wayve.rst  wayve_api.rst
examples/: Demonstration.ipynb  IEA37_case_study_3_wind_farm.yaml  example_ABL.nc  example_ABL_s.nc  example_ABL_u.nc  flow_case_timeseries_site.yaml  flow_example_timeseries.yaml  validate_data.py  verticalVariationTimeseries.nc
examples/post_proc/: README.md  build_PCE.py  power_sensitivity_analysis.py
flow_api/: Simple Demonstration.ipynb  __init__.py  foxes_api.py  main_api.py  pywake_api.py  simple_demonstration.ipynb  wayve_api.py
flow_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flow_api/cs_api/: README.md  __init__.py  cs_launch_modules.py  cs_postprocess_utils.py  cs_run_function.py  generate_salome_mesh.py  nieuwstadt_stable_profiles_utils.py  write_cs_fields.py  write_meteo_file_from_precursor.py
flow_api/tests/: __init__.py  test_foxes.py  test_pywake.py
flow_api/windio_schemas/: wind_energy_system.yaml
notebooks/: 20240910_flow_api_demo.ipynb  20240910_flow_demo.ipynb  20240912_flow_api_demo_short.ipynb  simple_demonstration.ipynb
oneTurbineNoBlockage/: PowerTable.nc  output.yaml  recorded_inputs.yaml
recipe/: README.md
tests/: __init__.py  test_cs.py  test_example_schema.py  test_foxes.py  test_pywake.py  test_wayve.py
vnv/uq_validation/: SA_FLOW_tools_power.ipynb  foxes_test_power.ipynb  foxes_test_ws.ipynb  launch_sensitivity_study.ipynb  (+7 more)
wifa/: __init__.py  foxes_api.py  main_api.py  pywake_api.py  wayve_api.py
(+363 files in other folders)
