# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_api"
version = "1.0"
authors = [
  {name = "Julian Quick"},
  {name = "Rem-Sophia Mouradi"},
  {name = "Jonas Schulte"},
  {name = "Koen Devesse"},  
  {name = "Paul van der Laan"}, 
  {name = "Antoine Mathieu"}, 
]
maintainers = [
  {name = "Julian Quick"},
  {name = "Rem-Sophia Mouradi"},
  {name = "Jonas Schulte"},
  {name = "Koen Devesse"}, 
]
description = "Unified interface to wake and flow models"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8"
dependencies = [
    "py_wake>=2.6.5",
    "foxes>=1.2.3",
    "windIO @ git+https://github.com/EUFLOW/windIO@master",
    "wayve @ git+https://gitlab.kuleuven.be/TFSO-software/wayve@dev_foxes",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
]
dev = [
    "objsize",
    "jupyter",
    "ncplot",
    "nctoolkit",
    "cartopy",
]

[project.urls]
Homepage = "https://gitlab.windenergy.dtu.dk/eu-flow/wp4/FLOW_API/"
Documentation = "https://gitlab.windenergy.dtu.dk/eu-flow/wp4/FLOW_API/"
Repository = "https://gitlab.windenergy.dtu.dk/eu-flow/wp4/FLOW_API.git"
"Bug Tracker" = "https://gitlab.windenergy.dtu.dk/eu-flow/wp4/FLOW_API/issues"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs", "recipe", "results", "output"]

[project.scripts]
flow_api = "flow_api.main_api:run"
flow_api_foxes = "flow_api.foxes_api:run"
flow_api_pywake = "flow_api.pywake_api:run"
flow_api_wayve = "flow_api.wayve_api:run"
flow_api_saturne = "flow_api.cs_api.cs_modules.csLaunch.cs_run_function:run"
